gnutls: Don't hang trying to handshake, if early close

When closing a connection before the handshake, the GTlsConnectionGnutls
code would try to do a handshake. Fix this, and test for it.

https://bugzilla.gnome.org/show_bug.cgi?id=689271